--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -1,17 +1,25 @@
 .container{
-    background-image: url(../../assets/POKEMON1.jpg);
+    /* background-image: url(../../assets/POKEMON1.jpg); */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 80px;
   }
   .lista{
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
   }
   .listaordenada{
-    margin: 30px;
+    /* margin: 30px;
     min-height: 30px;
     min-width: 300px;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; */
   
+  }
+  
+  .pokebola{
+    height: 100px;
   }
   
   .list{
@@ -19,21 +27,20 @@
   }
   
   .container1{
-    margin-left: 20px;
   }
   
   .btn{
-    display: inline;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 28px;
     font-weight: 400;
     color: white;
     background-color: #000000;
-    padding: 2px 16px 8px;
     border: 4.4px solid black;
     border-radius: 32px;
     text-decoration: none;
-    text-align: right;     
-    margin-left: 35px;
+    /* text-align: right;      */
   }
   .btn:active {
     border-color: white;
