--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@
 	--color-unknow: #757575;
 
 	--color-primary: #771000;
-	--color-primary-hover: #83c5be;
+	--color-primary-hover: #000000;
 }
 
 *{
