--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -4,44 +4,54 @@
     align-items: center;
     justify-content: center;
     padding-top: 80px;
-  }
-  .lista{
-    /* width: 100%;
-    height: 100%; */
-  }
-  .listaordenada{
-    /* margin: 30px;
-    min-height: 30px;
-    min-width: 300px;
+    flex-direction: column;
+  }  
+  .Link{
     display: flex;
-    flex-direction: column; */
-  
+    flex-direction: row;
   }
-  
-  .pokebola{
-    height: 100px;
+
+  .PokebolaandTitulo{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
   }
-  
-  .list{
-    list-style-type: none;
-  }
-  
-  .container1{
-  }
-  
-  .btn{
+
+  .titulo{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 28px;
-    font-weight: 400;
-    color: white;
-    background-color: #000000;
-    border: 4.4px solid black;
-    border-radius: 32px;
-    text-decoration: none;
-    /* text-align: right;      */
   }
+
+  .containerButtonPokebola{
+    padding-top: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  .pokebola{
+    height: 100px;
+  }
+
+  .btn{
+    font-size: 30px;
+    /* font-weight: 40; */
+    height: 40px;
+    color: #fff;
+    background-color: black;
+    border: 2.2px solid black;
+    text-decoration: none;
+    border-radius: 10px;
+    /* text-align: right;      */
+  
+  }
+
+
+  .btn:hover{
+    background-color: #EF4138;
+    color: #fff;
+  }
+
   .btn:active {
     border-color: white;
     color: #000000;
@@ -55,3 +65,4 @@
   .btn:focus {
     outline: none;
   }
+
